--- a/package.json
+++ b/package.json
@@ -4,9 +4,6 @@
   "dependencies": {
     "@rails/actiontext": "^6.1.5",
     "@rails/webpacker": "5.4.3",
-    "autoprefixer": "^10.4.2",
-    "postcss": "^8.4.8",
-    "tailwindcss": "^3.0.23",
     "trix": "^2.0.0-alpha.1",
     "webpack": "4.46.0",
     "webpack-cli": "3.3.12"
@@ -19,8 +16,12 @@
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.0",
     "@tailwindcss/line-clamp": "^0.3.1",
+    "@tailwindcss/postcss7-compat": "^2.2.17",
     "@tailwindcss/typography": "^0.5.2",
+    "autoprefixer": "^9.8.8",
+    "postcss": "^7.0.39",
     "prettier": "^2.5.1",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "webpack-dev-server": "3"
   }
 }
