Prepare for deploy

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "webpack-cli": "3.3.12"
   },
   "scripts": {
-    "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify"
+    "prebuild:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify"
   },
   "devDependencies": {
     "@prettier/plugin-ruby": "^2.0.0",
