--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "webpack-cli": "3.3.12"
   },
   "scripts": {
-    "prebuild:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify"
+    "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify"
   },
   "devDependencies": {
     "@prettier/plugin-ruby": "^2.0.0",
@@ -21,7 +21,7 @@
     "autoprefixer": "^9.8.8",
     "postcss": "^7.0.39",
     "prettier": "^2.5.1",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
+    "tailwindcss": "^3.0.23",
     "webpack-dev-server": "3"
   }
 }
