--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "private": "true",
   "dependencies": {
     "@rails/actiontext": "^6.1.5",
-    "@rails/webpacker": "5.4.3",
+    "@rails/webpacker": "5.40.0",
+    "npm-run-all": "^4.1.5",
     "trix": "^2.0.0-alpha.1",
-    "webpack": "5.4.3",
+    "webpack": "5.40.0",
     "webpack-cli": "3.3.12"
   },
   "scripts": {
